--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "4.1.2",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.1",
     "expect": "^1.20.2",
